--- a/src/components/GithubPopularRepos/index.css
+++ b/src/components/GithubPopularRepos/index.css
@@ -3,23 +3,27 @@
 .maincontainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  padding: 50px;
   align-items: center;
+  height: 100vh;
+  width: 100vw;
 }
 .mainheading {
   font-size: 30px;
   color: black;
   font-family: Lobster;
   font-weight: bold;
+  align-self: center;
 }
 .languagescontainer {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-around;
   list-style-type: none;
+  width: 50%;
 }
 .repositorycontainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: center;
+  width: 100%;
 }
