--- a/src/components/RepositoryItem/index.css
+++ b/src/components/RepositoryItem/index.css
@@ -2,8 +2,12 @@
 .repolist {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
+  background-color: #f8f8ff;
+  width: 25%;
+  margin: 10px;
+  padding: 10px;
+  border: 5px;
 }
 .eachlistimage {
   width: 50px;
@@ -17,17 +21,18 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 .starscont {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 }
 .countimage {
   width: 10px;
   height: 10px;
+  margin-right: 10px;
 }
 .counttext {
   font-size: 10px;
