--- a/src/components/GithubPopularRepos/index.css
+++ b/src/components/GithubPopularRepos/index.css
@@ -3,7 +3,7 @@
 .maincontainer {
   display: flex;
   flex-direction: column;
-  padding: 50px;
+
   align-items: center;
   height: 100vh;
   width: 100vw;
@@ -13,7 +13,7 @@
   color: black;
   font-family: Lobster;
   font-weight: bold;
-  align-self: center;
+  text-align: center;
 }
 .languagescontainer {
   display: flex;
@@ -24,6 +24,24 @@
 .repositorycontainer {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.failureview {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.failureimgae {
+  height: 60%;
+  width: 50%;
+}
+.failuretext {
+  font-size: 30px;
+  font-weight: bold;
 }
