--- a/src/components/LanguageFilterItem/index.css
+++ b/src/components/LanguageFilterItem/index.css
@@ -3,17 +3,17 @@
   font-size: 10px;
   color: black;
   cursor: pointer;
+  border: 0px;
+  background-color: transparent;
 }
 .selectedcss {
   font-size: 10px;
-  border-radius: 5px;
+  border-radius: 25px;
   border: 1px solid blue;
   color: blue;
-  padding: 3px;
-  cursor: pointer;
-}
-.list {
-  cursor: pointer;
-  border: 0px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   background-color: transparent;
 }
