--- a/src/components/RepositoryItem/index.css
+++ b/src/components/RepositoryItem/index.css
@@ -2,9 +2,11 @@
 .repolist {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   background-color: #f8f8ff;
-  width: 25%;
+  width: 30%;
+  height: 300px;
   margin: 10px;
   padding: 10px;
   border: 5px;
